--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -39,5 +39,12 @@
     "UNFLAGGED": "незамеченный",
     "UNSEEN": "невидимый",
     "inbox": "Входящие",
-    "INBOX": "Выберите Входящие"
+    "INBOX": "Выберите Входящие",
+    "Tab icons": "Создание иконок",
+    "Info icons": "Загрузить значок папки.",
+    "iconname": "Имя значка",
+    "ICONNAME": "Название значка (например, gmail)",
+    "Tab Hosts": "Создать IMAP`S",
+    "icon64": "Выбрать иконку",
+    "ICON64": "Выбрать иконку"
 }
