--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -39,5 +39,12 @@
     "UNFLAGGED": "не позначений",
     "UNSEEN": "невидимий",
     "inbox": "Вхідні",
-    "INBOX": "Виберіть Вхідні"
+    "INBOX": "Виберіть Вхідні",
+    "Tab icons": "Створення значків",
+    "Info icons": "Завантажити значок папки.",
+    "iconname": "Назва значка",
+    "ICONNAME": "Назва значка (наприклад, gmail)",
+    "Tab Hosts": "Створіть IMAP`S",
+    "icon64": "Виберіть іконку",
+    "ICON64": "Виберіть іконку"
 }
