--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -3,19 +3,19 @@
     "activ": "Aktiv",
     "ACTIV": "Host aktivieren",
     "host": "Hostname",
-    "HOST": "Hostname (z. B. imap.example.com oder example.com)",
+    "HOST": "Hostname (z. Bsp:. imap.example.com)",
     "port": "Port",
     "PORT": "Port (Standard: 993)",
-    "username": "Nutzername",
-    "USERNAME": "Nutzername",
+    "username": "Benutzername",
+    "USERNAME": "Benutzername",
     "password": "Passwort",
     "PASSWORD": "Passwort",
     "max": "max.",
     "MAX": "Wie viele E-Mails sollen als Datenpunkte angelegt werden?",
-    "max_html": "max.",
+    "max_html": "max. HTML",
     "MAX_HTML": "Wie viele E-Mails sollen als HTML erstellt werden?",
     "token": "Token",
-    "TOKEN": "Token für die xoauth2-Anmeldung",
+    "TOKEN": "Token für eine xoauth2-Anmeldung",
     "tls": "TLS",
     "TLS": "TLS aktivieren",
     "attach": "Att.",
@@ -43,8 +43,12 @@
     "Tab icons": "Symbole erstellen",
     "Info icons": "Ordnersymbol hochladen.",
     "iconname": "Symbolname",
-    "ICONNAME": "Name des Symbols (z. B. Google Mail)",
+    "ICONNAME": "Name des Symbols (z. Bsp:. Google Mail)",
     "Tab Hosts": "IMAPs erstellen",
     "icon64": "Symbol auswählen",
-    "ICON64": "Symbol auswählen"
+    "ICON64": "Symbol auswählen",
+    "tls_option": "tls-Option",
+    "TLS_OPTION": "Options-Objekt, das an tls.connect() übergeben werden soll",
+    "auto_tls": "Auto-TLS",
+    "AUTO_TLS": "Auf 'always' setzen, um immer Verbindungs-Upgrades über STARTTLS zu versuchen, 'required', nur wenn ein Upgrade erforderlich ist, oder 'nerver', um nie ein Upgrade zu versuchen."
 }
