--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -45,6 +45,10 @@
     "iconname": "Имя значка",
     "ICONNAME": "Название значка (например, gmail)",
     "Tab Hosts": "Создать IMAP`S",
-    "icon64": "Выбрать иконку",
-    "ICON64": "Выбрать иконку"
+    "icon64": "Выберите значок",
+    "ICON64": "Выберите значок",
+    "tls_option": "tls-опция",
+    "TLS_OPTION": "Объект параметров для передачи в tls.connect()",
+    "auto_tls": "автоматический TLS",
+    "AUTO_TLS": "Установите «всегда», чтобы всегда пытаться обновить подключение через STARTTLS, «обязательно», только если обновление требуется, или «никогда», чтобы никогда не пытаться обновить."
 }
