--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -45,6 +45,10 @@
     "iconname": "Nazwa ikony",
     "ICONNAME": "Nazwa ikony (np. gmail)",
     "Tab Hosts": "Utwórz IMAP",
-    "icon64": "Ikony Choose",
-    "ICON64": "Ikony Choose"
+    "icon64": "Wybierz ikonę",
+    "ICON64": "Wybierz ikonę",
+    "tls_option": "opcja tls",
+    "TLS_OPTION": "Obiekt opcji do przekazania do tls.connect()",
+    "auto_tls": "auto tls",
+    "AUTO_TLS": "Ustaw „zawsze”, aby zawsze próbować aktualizować połączenia przez STARTTLS, „wymagane” tylko wtedy, gdy aktualizacja jest wymagana, lub „nigdy”, aby nigdy nie podejmować prób aktualizacji."
 }
