--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -45,6 +45,10 @@
     "iconname": "Назва значка",
     "ICONNAME": "Назва значка (наприклад, gmail)",
     "Tab Hosts": "Створіть IMAP`S",
-    "icon64": "Виберіть іконку",
-    "ICON64": "Виберіть іконку"
+    "icon64": "Виберіть значок",
+    "ICON64": "Виберіть значок",
+    "tls_option": "параметр tls",
+    "TLS_OPTION": "Об’єкт параметрів для передачі в tl.connect()",
+    "auto_tls": "авто tls",
+    "AUTO_TLS": "Установіть значення «завжди», щоб завжди намагатися оновити з’єднання через STARTTLS, «обов’язково», лише якщо потрібне оновлення, або «ніколи», щоб ніколи не намагатися оновлення."
 }
