--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -50,5 +50,17 @@
     "tls_option": "tls-опция",
     "TLS_OPTION": "Объект параметров для передачи в tls.connect()",
     "auto_tls": "автоматический TLS",
-    "AUTO_TLS": "Установите «всегда», чтобы всегда пытаться обновить подключение через STARTTLS, «обязательно», только если обновление требуется, или «никогда», чтобы никогда не пытаться обновить."
+    "AUTO_TLS": "Установите «всегда», чтобы всегда пытаться обновить подключение через STARTTLS, «обязательно», только если обновление требуется, или «никогда», чтобы никогда не пытаться обновить.",
+    "Tab oauth": "Авторизовать oauth2",
+    "Tab oauth2": "Войти данные oauth2",
+    "provider": "Провайдер",
+    "PROVIDER": "Провайдер",
+    "name": "Имя",
+    "NAME": "Имя",
+    "clientid": "ID клиента",
+    "CLIENTID": "ID клиента",
+    "secureid": "Секретный идентификатор",
+    "SECUREID": "Секретный идентификатор",
+    "pathid": "Идентификатор каталога",
+    "PATHID": "Идентификатор каталога"
 }
