--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -50,5 +50,17 @@
     "tls_option": "параметр tls",
     "TLS_OPTION": "Об’єкт параметрів для передачі в tl.connect()",
     "auto_tls": "авто tls",
-    "AUTO_TLS": "Установіть значення «завжди», щоб завжди намагатися оновити з’єднання через STARTTLS, «обов’язково», лише якщо потрібне оновлення, або «ніколи», щоб ніколи не намагатися оновлення."
+    "AUTO_TLS": "Установіть значення «завжди», щоб завжди намагатися оновити з’єднання через STARTTLS, «обов’язково», лише якщо потрібне оновлення, або «ніколи», щоб ніколи не намагатися оновлення.",
+    "Tab oauth": "Авторизувати oauth2",
+    "Tab oauth2": "Дані входу oauth2",
+    "provider": "Провайдер",
+    "PROVIDER": "Провайдер",
+    "name": "Ім'я",
+    "NAME": "Ім'я",
+    "clientid": "ID клієнта",
+    "CLIENTID": "ID клієнта",
+    "secureid": "Секретний ідентифікатор",
+    "SECUREID": "Секретний ідентифікатор",
+    "pathid": "Ідентифікатор каталогу",
+    "PATHID": "Ідентифікатор каталогу"
 }
