--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -50,5 +50,17 @@
     "tls_option": "选项",
     "TLS_OPTION": "要传递给 tls.connect() 的选项对象",
     "auto_tls": "自动传输",
-    "AUTO_TLS": "设置为“始终”以始终尝试通过 STARTTLS 进行连接升级，设置为“必需”仅在需要升级时设置，或设置为“从不”以从不尝试升级。"
+    "AUTO_TLS": "设置为“始终”以始终尝试通过 STARTTLS 进行连接升级，设置为“必需”仅在需要升级时设置，或设置为“从不”以从不尝试升级。",
+    "Tab oauth": "授权oauth2",
+    "Tab oauth2": "登录oauth2数据",
+    "provider": "供应商",
+    "PROVIDER": "供应商",
+    "name": "姓名",
+    "NAME": "姓名",
+    "clientid": "客户端编号",
+    "CLIENTID": "客户端编号",
+    "secureid": "密码",
+    "SECUREID": "密码",
+    "pathid": "目录编号",
+    "PATHID": "目录编号"
 }
