Fix refresh crash and add MB threshold

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -3,19 +3,19 @@
     "activ": "Aktiv",
     "ACTIV": "Host aktivieren",
     "host": "Hostname",
-    "HOST": "Hostname (z. Bsp:. imap.example.com)",
-    "port": "Port",
+    "HOST": "Hostname (z. B. imap.example.com oder example.com)",
+    "port": "Hafen",
     "PORT": "Port (Standard: 993)",
-    "username": "Benutzername",
-    "USERNAME": "Benutzername",
+    "username": "Nutzername",
+    "USERNAME": "Nutzername",
     "password": "Passwort",
     "PASSWORD": "Passwort",
     "max": "max.",
     "MAX": "Wie viele E-Mails sollen als Datenpunkte angelegt werden?",
-    "max_html": "max. HTML",
+    "max_html": "max.",
     "MAX_HTML": "Wie viele E-Mails sollen als HTML erstellt werden?",
-    "token": "Token",
-    "TOKEN": "Token für eine xoauth2-Anmeldung",
+    "token": "Zeichen",
+    "TOKEN": "Token für die xoauth2-Anmeldung",
     "tls": "TLS",
     "TLS": "TLS aktivieren",
     "attach": "Att.",
@@ -43,15 +43,15 @@
     "Tab icons": "Symbole erstellen",
     "Info icons": "Ordnersymbol hochladen.",
     "iconname": "Symbolname",
-    "ICONNAME": "Name des Symbols (z. Bsp:. Google Mail)",
+    "ICONNAME": "Name des Symbols (z. B. Google Mail)",
     "Tab Hosts": "IMAPs erstellen",
     "icon64": "Symbol auswählen",
     "ICON64": "Symbol auswählen",
     "tls_option": "tls-Option",
     "TLS_OPTION": "Options-Objekt, das an tls.connect() übergeben werden soll",
     "auto_tls": "Auto-TLS",
-    "AUTO_TLS": "Auf 'always' setzen, um immer Verbindungs-Upgrades über STARTTLS zu versuchen, 'required', nur wenn ein Upgrade erforderlich ist, oder 'nerver', um nie ein Upgrade zu versuchen.",
-    "Tab oauth": "Autorisierung oauth2",
+    "AUTO_TLS": "Auf „immer“ setzen, um immer Verbindungs-Upgrades über STARTTLS zu versuchen, „erforderlich“, nur wenn ein Upgrade erforderlich ist, oder „nie“, um nie ein Upgrade zu versuchen.",
+    "Tab oauth": "Autorisieren Sie oauth2",
     "Tab oauth2": "Login-oauth2-Daten",
     "provider": "Anbieter",
     "PROVIDER": "Anbieter",
@@ -62,5 +62,15 @@
     "secureid": "Geheime ID",
     "SECUREID": "Geheime ID",
     "pathid": "Verzeichnis-ID",
-    "PATHID": "Verzeichnis-ID"
+    "PATHID": "Verzeichnis-ID",
+    "MAX_MB": "max. MEMRSS-Limit für einen Adapterneustart (100-600 MB - 24h-Check)",
+    "objectId": "Objekt Identifikation",
+    "telegram_user": "Instanz Benutzer",
+    "telegram_user_tooltip": "Instanz Benutzer (Mehrere durch Komma trennen - z. B. Peter, Olaf)",
+    "telegram": "Instanzen",
+    "selection": "Auswahl",
+    "TELEGRAM": "Senden",
+    "RESTART": "Neu starten",
+    "DATAPOINT": "Datenpunkt",
+    "telegram_tooltip": "Instanz (Mehrere durch Komma trennen - z. B. Telegramm.0, Telegramm.1)"
 }
