--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -62,5 +62,15 @@
     "secureid": "Секретный идентификатор",
     "SECUREID": "Секретный идентификатор",
     "pathid": "Идентификатор каталога",
-    "PATHID": "Идентификатор каталога"
+    "PATHID": "Идентификатор каталога",
+    "MAX_MB": "Макс. Лимит MEMRSS для перезапуска адаптера (100-600 МБ - проверка 24 часа)",
+    "objectId": "Идентификатор объекта",
+    "telegram_user": "Пользователь экземпляра",
+    "telegram_user_tooltip": "Пользователь экземпляра (разделяйте несколько запятыми — например, Питер, Олаф)",
+    "telegram": "Пример",
+    "selection": "Выбор",
+    "TELEGRAM": "Отправлять",
+    "RESTART": "Перезапуск",
+    "DATAPOINT": "Точка данных",
+    "telegram_tooltip": "Экземпляр (разделяйте кратные запятой - например, телеграмма.0, телеграмма.1)"
 }
