--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -62,5 +62,15 @@
     "secureid": "Секретний ідентифікатор",
     "SECUREID": "Секретний ідентифікатор",
     "pathid": "Ідентифікатор каталогу",
-    "PATHID": "Ідентифікатор каталогу"
+    "PATHID": "Ідентифікатор каталогу",
+    "MAX_MB": "Макс. Обмеження MEMRSS для перезавантаження адаптера (100-600 МБ - 24 години перевірки)",
+    "objectId": "Object-ID",
+    "telegram_user": "Користувач екземпляра",
+    "telegram_user_tooltip": "Користувач екземпляра (розділяйте кратні комами, наприклад, Peter, Olaf)",
+    "telegram": "Екземпляр",
+    "selection": "Вибір",
+    "TELEGRAM": "Надіслати",
+    "RESTART": "Перезапустіть",
+    "DATAPOINT": "Точка даних",
+    "telegram_tooltip": "Екземпляр (розділяйте кратні комами, наприклад, telegram.0, telegram.1)"
 }
